Fix navbar spacing and center footer on mobile
- Add 70px top padding to hero-section and mid-section on mobile (≤767px and ≤479px) to account for fixed navbar height
- Center all footer elements: footer-top, footer-logo, footer-social, footer-grid, footer-column, footer-title, footer-link, footer-bottom, footer-bottom-wrapper
- Add text-align center to footer-01 and footer-love-icon styling

--- a/css/style.css
+++ b/css/style.css
@@ -1292,7 +1292,7 @@ p {
 @media (max-width: 767px) {
   /* Hero */
   .hero-section {
-    padding-top: 30px;
+    padding-top: 70px;
     padding-bottom: 50px;
     padding-left: 40px;
   }
@@ -1345,6 +1345,7 @@ p {
 
   /* Mid Section */
   .mid-section {
+    padding-top: 70px;
     padding-right: 50px;
     padding-left: 50px;
   }
@@ -1505,7 +1506,7 @@ a, button {
   /* Hero */
   .hero-section {
     display: block;
-    padding-top: 35px;
+    padding-top: 70px;
     padding-bottom: 66px;
   }
 
@@ -1527,6 +1528,7 @@ a, button {
 
   /* Mid Section */
   .mid-section {
+    padding-top: 70px;
     padding-right: 20px;
     padding-left: 20px;
   }
@@ -1695,6 +1697,7 @@ a, button {
   .footer-top {
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
 
   .footer-social {
@@ -1704,6 +1707,13 @@ a, button {
 
   .footer-logo {
     margin-bottom: 32px;
+    text-align: center;
+    display: block;
+  }
+
+  .footer-logo img {
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .footer-column {
@@ -1717,6 +1727,7 @@ a, button {
 
   .footer-link {
     text-align: center;
+    justify-content: center;
   }
 
   .footer-bottom {
@@ -1726,6 +1737,17 @@ a, button {
 
   .footer-01 {
     padding: 60px 5%;
+    text-align: center;
+  }
+
+  .footer-love-icon {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .footer-made-text,
+  .footer-community-link {
+    text-align: center;
   }
 
   .grid-2 {
